[package]
name = "rustest"
version = "0.1.0"
authors = ["Zhijie Shen <zjshen14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sputnikvm = { git = "https://github.com/ETCDEVTeam/sputnikvm" }
sputnikvm-network-classic = { git = "https://github.com/ETCDEVTeam/sputnikvm" }
etcommon-hexutil = "0.2"
etcommon-bigint = "0.2"
